v3: JS - update toggle and target options (#217)
* add new selector utils

* lint utils

* update collapse and related items

* more collapse related

* update dropdown and related items

* update modal and related

* update player dropdown init calls

* update tooltip and popover

* misc cleanup

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1849,10 +1849,10 @@ Anchor variants:<br />
   <button type="button" class="btn btn-secondary">2</button>
 
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropSample0">
+    <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
       Dropdown
     </button>
-    <ul class="dropdown-menu" id="dropSample0">
+    <ul class="dropdown-menu">
       <li><a href="#">Dropdown link</a></li>
       <li><a href="#">Dropdown link</a></li>
     </ul>
@@ -1867,10 +1867,10 @@ Anchor variants:<br />
   <button type="button" class="btn">Top</button>
   <button type="button" class="btn">Middle</button>
   <div class="btn-group" role="group">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropSample1">
+    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
       Dropdown
     </button>
-    <ul class="dropdown-menu" id="dropSample1">
+    <ul class="dropdown-menu">
       <li><a href="#">Dropdown link</a></li>
       <li><a href="#">Dropdown link</a></li>
     </ul>
@@ -1988,10 +1988,10 @@ Anchor variants:<br />
   <div class="col-lg-6">
     <div class="input-group">
       <div class="input-group-btn">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropSample2">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
           Action
         </button>
-        <ul class="dropdown-menu" id="dropSample2">
+        <ul class="dropdown-menu">
           <li><a href="#">Action</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
@@ -2006,10 +2006,10 @@ Anchor variants:<br />
     <div class="input-group">
       <input type="text" class="form-control" aria-label="Text input with dropdown button">
       <div class="input-group-btn">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropSample3">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
           Action
         </button>
-        <ul class="dropdown-menu dropdown-menu-right" id="dropSample3">
+        <ul class="dropdown-menu dropdown-menu-right">
           <li><a href="#">Action</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
@@ -2027,10 +2027,10 @@ Anchor variants:<br />
     <div class="input-group">
       <div class="input-group-btn">
         <button type="button" class="btn btn-secondary">Action</button>
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropSample4">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
           <span class="sr-only">Toggle Dropdown</span>
         </button>
-        <ul class="dropdown-menu" id="dropSample4">
+        <ul class="dropdown-menu">
           <li><a href="#">Action</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
@@ -2046,10 +2046,10 @@ Anchor variants:<br />
       <input type="text" class="form-control" aria-label="Text input with segmented button dropdown">
       <div class="input-group-btn">
         <button type="button" class="btn btn-secondary">Action</button>
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropSample5">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
           <span class="sr-only">Toggle Dropdown</span>
         </button>
-        <ul class="dropdown-menu" id="dropSample5">
+        <ul class="dropdown-menu">
           <li><a href="#">Action</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
@@ -2269,10 +2269,10 @@ Anchor variants:<br />
 <div class="dropdown-single">
     Using .caret:
     <div class="dropdown">
-      <button type="button" class="btn btn-danger" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropdownSingle0">
+      <button type="button" class="btn btn-danger" data-cfw="dropdown">
         Action <span class="caret" aria-hidden="true"></span>
       </button>
-      <ul class="dropdown-menu" id="dropdownSingle0">
+      <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Action</a></li>
         <li><a class="dropdown-item" href="#">Another action</a></li>
         <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -2284,10 +2284,10 @@ Anchor variants:<br />
 <div class="dropdown-single">
     Using .dropdown-toggle:
     <div class="btn-group">
-      <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropdownSingle1">
+      <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown">
         Action
       </button>
-      <ul class="dropdown-menu" id="dropdownSingle1">
+      <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Action</a></li>
         <li><a class="dropdown-item" href="#">Another action</a></li>
         <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -2300,10 +2300,10 @@ Anchor variants:<br />
 <h3>Dropdown - split button</h3>
 <div class="btn-group">
   <button type="button" class="btn btn-danger">Action</button>
-  <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropdownSplit0">
+  <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown">
     <span class="sr-only">Toggle Dropdown</span>
   </button>
-  <ul class="dropdown-menu" id="dropdownSplit0">
+  <ul class="dropdown-menu">
     <li><a class="dropdown-item" href="#">Action</a></li>
     <li><a class="dropdown-item" href="#">Another action</a></li>
     <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -2315,10 +2315,10 @@ Anchor variants:<br />
 <h3>Dropdown - Menu Alignment</h3>
 <div class="clearfix">
     <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_3" data-cfw-dropdown-backlink=true>
+        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
             Default <!-- <span class="caret" aria-hidden="true"></span> -->
         </button>
-        <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_3">
+        <ul class="dropdown-menu">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -2374,10 +2374,10 @@ Anchor variants:<br />
     </div>
 
     <div class="btn-group dropup">
-        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_4">
+        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown">
             Drop Up <!-- <span class="caret" aria-hidden="true"></span> -->
         </button>
-        <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_4">
+        <ul class="dropdown-menu">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -2433,10 +2433,10 @@ Anchor variants:<br />
     </div>
 
     <div class="btn-group dropdown-menu-left" style="float: right;">
-        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_5" data-cfw-dropdown-backlink=true>
+        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
             Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
         </button>
-        <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_5">
+        <ul class="dropdown-menu">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -2494,10 +2494,10 @@ Anchor variants:<br />
 
 <h3>Dropdown - submenu alignment</h3>
 <div class="btn-group">
-    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownSub1" data-cfw-dropdown-backlink=true>
+    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Default<!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
-    <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownSub1">
+    <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2544,10 +2544,10 @@ Anchor variants:<br />
 </div>
 
 <div class="btn-group dropdown-menu-right">
-    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownSub2" data-cfw-dropdown-backlink=true>
+    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Drop Right <!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
-    <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownSub2">
+    <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2594,10 +2594,10 @@ Anchor variants:<br />
 </div>
 
 <div class="btn-group dropdown-menu-left" style="float: right;">
-    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownSub3" data-cfw-dropdown-backlink=true>
+    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
-    <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownSub3">
+    <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2646,10 +2646,10 @@ Anchor variants:<br />
 <h3>Dropup submenu alignment</h3>
 
 <div class="btn-group dropup">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dup" data-cfw-dropdown-backlink="true">
+    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Dropup
     </button>
-    <ul class="dropdown-menu" data-cfw-dropdown-target="dup">
+    <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2697,10 +2697,10 @@ Anchor variants:<br />
 
 
 <div class="btn-group dropup dropdown-menu-right">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dupR" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
+    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
         Dropup Right
     </button>
-    <ul class="dropdown-menu" data-cfw-dropdown-target="dupR">
+    <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2747,10 +2747,10 @@ Anchor variants:<br />
 </div>
 
 <div class="btn-group dropup dropdown-menu-left">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dupL" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
+    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
         Dropup Left
     </button>
-    <ul class="dropdown-menu" data-cfw-dropdown-target="dupL">
+    <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2911,8 +2911,8 @@ Anchor variants:<br />
     <a class="nav-link active" href="#">Active</a>
   </li>
   <li class="nav-item dropdown">
-    <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropNav1">Dropdown</a>
-    <ul class="dropdown-menu" id="dropNav1">
+    <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+    <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -2934,8 +2934,8 @@ Anchor variants:<br />
     <a class="nav-link active" href="#">Active</a>
   </li>
   <li class="nav-item dropdown">
-    <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropNav2">Dropdown</a>
-    <ul class="dropdown-menu" id="dropNav2">
+    <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+    <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -3070,7 +3070,7 @@ Anchor variants:<br />
   </div>
 </div>
 <nav class="navbar navbar-light bg-faded mb-1">
-  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar1" aria-label="Toggle navigation">
+  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#exCollapsingNavbar1" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
 </nav>
@@ -3079,7 +3079,7 @@ Anchor variants:<br />
 <small>resize screen below 'md' breakpoint</small><br />
 <nav class="navbar navbar-light bg-faded mb-1">
   <a class="navbar-brand" href="#">Responsive navbar</a>
-  <button class="navbar-toggle d-lg-none float-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2" aria-label="Toggle navigation">
+  <button class="navbar-toggle d-lg-none float-right" type="button" data-cfw="collapse" data-cfw-collapse-target="#exCollapsingNavbar2" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
   <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2">
