Alert - rework target handling, and move invocation to trigger

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -104,7 +104,7 @@
     }
 </script>
 
-<!-- Disable transitions for timing reasons, and so we don't have to watch all event callbacks -->
+<!-- Disable CFW API -->
 <script>
     var CFW_API = false;
 </script>
