Button - stop using aria-pressed for checkbox/radio inputs
The `aria-pressed` attribute is not needed for checkbox or radio inputs since screen-readers can use the `checked` attribute to determine state.

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -374,26 +374,26 @@ $(window).ready(function() {
                 <div class="col-sm-6">
                     <div class="btn-group" data-cfw="buttons">
                         <label class="btn btn-info">
-                            <input type="radio" name="options" checked /> Radio 1
+                            <input type="radio" name="options0" checked /> Radio 1
                         </label>
                         <label class="btn btn-info">
-                            <input type="radio" name="options" /> Radio 2
+                            <input type="radio" name="options0" /> Radio 2
                         </label>
                         <label class="btn btn-info">
-                            <input type="radio" name="options" /> Radio 3
+                            <input type="radio" name="options0" /> Radio 3
                         </label>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="btn-group" data-cfw="buttons">
                         <label class="btn btn-outline-info">
-                            <input type="radio" name="options" checked /> Radio 1
+                            <input type="radio" name="options1" checked /> Radio 1
                         </label>
                         <label class="btn btn-outline-info">
-                            <input type="radio" name="options" /> Radio 2
+                            <input type="radio" name="options1" /> Radio 2
                         </label>
                         <label class="btn btn-outline-info">
-                            <input type="radio" name="options" /> Radio 3
+                            <input type="radio" name="options1" /> Radio 3
                         </label>
                     </div>
                 </div>
