Fix navbar example labels

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2969,7 +2969,7 @@ Anchor variants:<br />
     </li>
   </ul>
   <form class="form-inline ml-auto">
-    <input class="form-control" type="text" placeholder="Search">
+    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
 </nav>
@@ -2991,7 +2991,7 @@ Anchor variants:<br />
     </li>
   </ul>
   <form class="form-inline ml-auto">
-    <input class="form-control" type="text" placeholder="Search">
+    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn" type="submit">Search</button>
   </form>
 </nav>
@@ -3013,7 +3013,7 @@ Anchor variants:<br />
     </li>
   </ul>
   <form class="form-inline ml-auto">
-    <input class="form-control" type="text" placeholder="Search">
+    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn" type="submit">Search</button>
   </form>
 </nav>
@@ -3035,7 +3035,7 @@ Anchor variants:<br />
     </li>
   </ul>
   <form class="form-inline ml-auto">
-    <input class="form-control" type="text" placeholder="Search">
+    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
 </nav>
