--- a/test/visual/flexbox-navbar.html
+++ b/test/visual/flexbox-navbar.html
@@ -51,8 +51,7 @@
             </li>
         </ul>
         <form class="form-inline my-1 my-md-0">
-            <label for="searchB0" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchB0">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -85,8 +84,7 @@
             </li>
         </ul>
         <form class="form-inline my-1 my-md-0">
-            <label for="searchB1" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchB1">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -121,8 +119,7 @@
             </li>
         </ul>
         <form class="form-inline ml-auto">
-            <label for="searchR0" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchR0">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -155,8 +152,7 @@
             </li>
         </ul>
         <form class="form-inline ml-auto">
-            <label for="searchR1" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchR1">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -189,8 +185,7 @@
             </li>
         </ul>
         <form class="form-inline ml-auto">
-            <label for="searchR2" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchR2">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -223,8 +218,7 @@
             </li>
         </ul>
         <form class="form-inline ml-auto">
-            <label for="searchR3" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchR3">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -257,8 +251,7 @@
             </li>
         </ul>
         <form class="form-inline ml-auto">
-            <label for="searchR4" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchR4">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -293,8 +286,7 @@
             </li>
         </ul>
         <form class="form-inline">
-            <label for="searchJ0" class="sr-only">Email address</label>
-            <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchJ0">
+            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -330,8 +322,7 @@
                 </li>
             </ul>
             <form class="form-inline ml-auto">
-                <label for="searchC0" class="sr-only">Email address</label>
-                <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchC0">
+                <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
         </div>
@@ -430,8 +421,7 @@
                 </li>
             </ul>
             <form class="form-inline ml-auto">
-                <label for="searchIC0" class="sr-only">Email address</label>
-                <input class="form-control mr-0_25" type="text" placeholder="Search" id="searchIC0">
+                <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
         </div>
