Add some aria-label where needed

--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -37,13 +37,13 @@ Holder.addTheme("gray", {
 
 <div class="input-group">
   <span class="input-group-addon" id="basic-addon1">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 
 <hr />
 
 <div class="input-group">
-  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon3">
+  <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon3">
   <span class="input-group-addon" id="basic-addon3">@example.com</span>
 </div>
 
@@ -62,13 +62,13 @@ Holder.addTheme("gray", {
 <div class="form-group">
   <div class="input-group">
     <span class="input-group-addon" id="basic-addon7">@</span>
-    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon8">
+    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon8">
   </div>
 </div>
 <div class="form-group">
   <div class="input-group">
     <span class="input-group-addon" id="basic-addon8">@</span>
-    <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon8">
+    <input type="password" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="basic-addon8">
   </div>
 </div>
 
@@ -130,13 +130,13 @@ Holder.addTheme("gray", {
   <span class="input-group-btn">
     <button class="btn" type="button">Go!</button>
   </span>
-  <input type="text" class="form-control" placeholder="Search for...">
+  <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
 </div>
 
 <hr />
 
 <div class="input-group">
-  <input type="text" class="form-control" placeholder="Search for...">
+  <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
   <span class="input-group-btn">
     <button class="btn" type="button">Go!</button>
   </span>
@@ -148,7 +148,7 @@ Holder.addTheme("gray", {
   <span class="input-group-btn">
     <button class="btn" type="button">Hate it</button>
   </span>
-  <input type="text" class="form-control" placeholder="Product name">
+  <input type="text" class="form-control" placeholder="Product name" aria-label="Product name">
   <span class="input-group-btn">
     <button class="btn" type="button">Love it</button>
   </span>
