--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1882,11 +1882,11 @@ Anchor variants:<br />
 <h3>Input groups</h3>
 <div class="input-group">
   <span class="input-group-addon" id="basic-addon1">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 <br>
 <div class="input-group">
-  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
+  <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
   <span class="input-group-addon" id="basic-addon2">@example.com</span>
 </div>
 <br>
@@ -1905,27 +1905,27 @@ Anchor variants:<br />
 <h3>Input group sizes</h3>
 <div class="input-group input-group-xl">
   <span class="input-group-addon" id="sizing-addon1">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon1">
 </div>
 <br />
 <div class="input-group input-group-lg">
   <span class="input-group-addon" id="sizing-addon2">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon2">
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon2">
 </div>
 <br />
 <div class="input-group">
   <span class="input-group-addon" id="sizing-addon3">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon3">
+  <input type="text" class="form-control" placeholder="Username"aria-label="Username" aria-describedby="sizing-addon3">
 </div>
 <br />
 <div class="input-group input-group-sm">
   <span class="input-group-addon" id="sizing-addon4">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon4">
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon4">
 </div>
 <br />
 <div class="input-group input-group-xs">
   <span class="input-group-addon" id="sizing-addon5">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon5">
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon5">
 </div>
 <br />
 
