--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -112,7 +112,7 @@
         </div>
         <div class="input-group">
             <span class="input-group-addon" id="btnGroupAddon">@</span>
-            <input type="text" class="form-control" placeholder="Input group example" aria-describedby="btnGroupAddon">
+            <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="btnGroupAddon">
           </div>
     </div>
 
