Remove uneeded float from visual test

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3857,7 +3857,7 @@ Anchor variants:<br />
 <h3>Card - heading nav</h3>
 <div class="card text-center">
   <div class="card-header">
-    <ul class="nav nav-tabs card-header-tabs float-left">
+    <ul class="nav nav-tabs card-header-tabs">
       <li class="nav-item">
         <a class="nav-link active" href="#">Active</a>
       </li>
@@ -3878,7 +3878,7 @@ Anchor variants:<br />
 
 <div class="card text-center">
   <div class="card-header">
-    <ul class="nav nav-pills card-header-pills float-left">
+    <ul class="nav nav-pills card-header-pills">
       <li class="nav-item">
         <a class="nav-link active" href="#">Active</a>
       </li>
