Stop dropdown FoC

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1408,7 +1408,7 @@ $(window).ready(function() {
                     <li class="nav-item"><a href="#beta" class="nav-link">Beta</a></li>
                     <li class="nav-item dropdown">
                         <a href="#dropdownS" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
-                        <ul id="dropdownS">
+                        <ul id="dropdownS" class="dropdown-menu">
                             <li><a href="#one" tabindex="-1">one</a></li>
                             <li><a href="#two" tabindex="-1">two</a></li>
                             <li class="dropdown-divider"></li>
