--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1012,6 +1012,34 @@ $(window).ready(function() {
 
             <h2 id="dropdown">Dropdown:</h2>
 
+            <div class="btn-group mr-1 mb-1">
+                <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown">
+                    Has Inputs
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><label class="dropdown-item form-check-label"><input type="checkbox" class="form-check-input"> Checkbox</label></li>
+                    <li><a href="#">Action</a></li>
+                    <li><label class="dropdown-item form-check-label"><input type="radio" name="dropradio" class="form-check-input"> Radio</label></li>
+                    <li><label class="dropdown-item form-check-label"><input type="radio" name="dropradio" class="form-check-input"> Radio</label></li>
+                    <li><a href="#">Action</a></li>
+                    <li><div class="dropdown-item"><input type="text" placeholder="text input"/></div></li>
+                    <li><div class="dropdown-item"><textarea placeholder="textarea"></textarea></div></li>
+                    <li><a href="#">Action</a></li>
+                    <li><button class="dropdown-item" type="button">Button</button></li>
+                </ul>
+            </div>
+
+            <div class="btn-group mb-1">
+                <input type="text"  data-cfw="dropdown" placeholder="click me" />
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Action</a></li>
+                </ul>
+            </div>
+            <br />
+
             <!-- Single button -->
             <div class="btn-group">
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown">
