Consolidate assets - use docs assets for tests

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -8,7 +8,7 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../vendor/jquery.min.js"></script>
+<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
 <script type="text/javascript" src="../../dist/js/figuration.js"></script>
 
 <script type="text/javascript" src="../../docs/assets/js/vendor/holder.min.js"></script>
@@ -1675,9 +1675,9 @@ Anchor variants:<br />
 <h3>Embed responsive</h3>
 <div class="video-sample">
     <div class="embed-fluid">
-        <video poster="../assets/video/niagara_falls.jpg" controls>
-            <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
-            <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
+        <video poster="../../docs/assets/video/niagara_falls.jpg" controls>
+            <source src="../../docs/assets/video/niagara_falls.mp4" type="video/mp4" />
+            <track src="../../docs/assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
             <p>HTML5 video not supported</p>
         </video>
     </div>
@@ -1686,9 +1686,9 @@ Anchor variants:<br />
 <h3>Embed responsive - in flex element</h3>
 <div class="video-sample" style="display: flex;">
     <div class="embed-fluid">
-        <video poster="../assets/video/niagara_falls.jpg" controls>
-            <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
-            <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
+        <video poster="../../docs/assets/video/niagara_falls.jpg" controls>
+            <source src="../../docs/assets/video/niagara_falls.mp4" type="video/mp4" />
+            <track src="../../docs/assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
             <p>HTML5 video not supported</p>
         </video>
     </div>
@@ -3536,7 +3536,7 @@ Anchor variants:<br />
 
     <h3>Card - image overlay</h3>
     <div class="card">
-      <img src="../assets/img/test.gif" class="card-img img-fluid" alt="Card image" style="width: 100%; opacity: .3;">
+      <img src="../../docs/assets/img/test.gif" class="card-img img-fluid" alt="Card image" style="width: 100%; opacity: .3;">
       <div class="card-img-overlay">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
