--- a/test/js/index.html
+++ b/test/js/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- jQuery -->
-<script src="../vendor/jquery.min.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.min.js"></script>
 <script>
     // Disable jQuery event aliases to ensure we don't accidentally use any of them
     (function() {
