--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -8,6 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
+<!-- <script type="text/javascript" src="https://rawgit.com/talee/mutationobserver-breaks-characterdata/master/MutationObserver.js"></script> -->
+
 <script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
 <script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
@@ -659,8 +661,8 @@ $(window).ready(function() {
                         Accordion_0
                         <span class="caret"></span>
                     </a>
-                    <div id="accordion_0">
-                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div id="accordion_0" class="collapse">
+                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                     </div>
                 </div>
                 <div>
@@ -668,8 +670,13 @@ $(window).ready(function() {
                         Accordion_1
                         <span class="caret"></span>
                     </a>
-                    <div id="accordion_1">
-                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div id="accordion_1" class="collapse">
+                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="" data-cfw="lazy" data-cfw-lazy-src="../../docs/assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid" />
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -677,8 +684,8 @@ $(window).ready(function() {
                         Accordion_2
                         <span class="caret"></span>
                     </a>
-                    <div id="accordion_2">
-                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div id="accordion_2" class="collapse">
+                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                     </div>
                 </div>
             </div>
@@ -1000,12 +1007,34 @@ $(window).ready(function() {
                     </div>
                     <div class="tab-pane" id="tabpanel3">
                         <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
+                        <div class="row" data-cfw="equalize" data-cfw-equalize-target=".card">
+                            <div class="col-4">
+                                <div class="card">
+                                    Card
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card">
+                                    Card<br />Card<br />Card<br />
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card">
+                                    Card
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="tabpanel4">
                         <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
                     </div>
                     <div class="tab-pane" id="tabpanel5">
                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="" data-cfw="lazy" data-cfw-lazy-src="../../docs/assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1616,7 +1645,7 @@ $(window).ready(function() {
             </div>
 
             <strong>By class:</strong>
-            <div class="row" data-cfw="equalize" data-cfw-equalize-target=".well" data-cfw-equalize-hidden=true>
+            <div class="row" data-cfw="equalize" data-cfw-equalize-target=".well">
                 <div class="col-md-4">
                     <div class="well">
                         <h3>Panel 1</h3>
@@ -1636,7 +1665,7 @@ $(window).ready(function() {
                         <!-- <img src="../../docs/assets/img/test.gif" alt="test pattern" class="img-fluid" /> -->
                     </div>
                 </div>
-                <div class="col-md-4 hidden">
+                <div class="col-md-4 d-none">
                     <div class="well">
                         <h3>Panel 4</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac nisi sem. Maecenas elementum a lectus quis fermentum.</p>
