--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -8,7 +8,9 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<!-- <script type="text/javascript" src="https://rawgit.com/talee/mutationobserver-breaks-characterdata/master/MutationObserver.js"></script> -->
+<!--[if lt IE 10]>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.24/MutationObserver.min.js" integrity="sha384-8HHYYRe45k4Xq40fi/cZaaby4FJgnOOVmnRzX3OWtwpfiUPfx7tnK2QkDPuIRGm0" crossorigin="anonymous"></script>
+<![endif]-->
 
 <script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
 <script type="text/javascript" src="../../js/util.js"></script>
